# ObsidianMemBridge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/architecture/: 00-overview.md
docs/architecture/reference/: directory-structure.md
docs/prd/: 00-overview.md  10-memory-gateway-mvp.md
src/membridge/: __init__.py  cli.py  config.py  core.py  mcp.py
src/membridge/core/: __init__.py  service.py
src/membridge/domain/: __init__.py  errors.py  models.py  validation.py
src/membridge/models/: __init__.py  memory.py
src/membridge/security/: __init__.py  sensitive.py
src/membridge/services/: memory.py
src/membridge/utils/: __init__.py  markdown.py  paths.py  sensitive.py  slug.py  validation.py
src/membridge/vault/: __init__.py  markdown.py  paths.py  store.py
src/obsidianmembridge/: __init__.py  cli.py  mcp.py  settings.py
src/obsidianmembridge/core/: service.py
src/obsidianmembridge/models/: __init__.py  errors.py
src/obsidianmembridge/utils/: markdown.py  paths.py  text.py  validation.py
tests/: test_core.py
tests/unit/core/: test_service.py
tests/unit/domain/: test_models.py
tests/unit/models/: test_memory_models.py
tests/unit/services/: test_memory.py
tests/unit/utils/: test_markdown.py  test_paths.py  test_validation.py
tests/unit/vault/: test_markdown.py  test_paths.py
