[project]
name = "membridge"
version = "0.1.0"
description = "membridge is an Obsidian-based shared memory layer for agents, providing governed context retrieval, memory proposals, episodic summaries, and project state across Claude, OpenClaw, Pi, Codex, and other AI tools."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.25.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "loguru>=0.7.3",
    "fastmcp >=3.3.1",
]

[dependency-groups]
dev = ["ty>=0.0.39", "ruff>=0.15.14", "pytest-asyncio>=1.3.0", "pytest>=9.0.3"]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[project.scripts]
meb = "membridge.cli:cli"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "membridge"

# Ruff
[tool.ruff]
line-length = 100
fix = true
preview = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "TID",  # tidy imports
    "PTH",  # pathlib
    "FLY",  # flynt-specific
    "RUF",  # Ruff-specific
    "FURB", # refurb specific
    "NPY",  # numpy-specific
    "PD",   # pandas-specific
]
ignore = [
    "F401", # module imported but unused (handled by pyflakes)
    "B008", # Typer calls in defaults (standard practice for Typer)
]
allowed-confusables = []
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

# Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"

pythonpath = "src"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
addopts = ["--import-mode=importlib", "--strict-markers"]
markers = [
    "integration: marks tests that hit external services (deselect with '-m \"not integration\"')",
]
